# python_template

./: .gitignore  .pylintrc  .travis.yml  CONFIG_SAMPLE.py  Logger.py  README.md  config_sample.py  logger.py  pythonTemplate.py  python_template  python_template.py  requirements.txt  setup.cfg  setup.py  tox.ini
python_template/: __init__.py  __main__.py  main.py  python_template.py
